Cambios para autenticación de beneficiario

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Beneficiarios Mejores ICFES Sibaté</title>
+  <title>Beneficiarios Mejores Bachilleres Sibaté</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" th:href="@{/css/app.css}" />
   <style>
