--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <header class="topbar">Beneficiarios Mejores ICFES Sibaté</header>
+  <header class="topbar">Beneficiarios Mejores Bachilleres Sibaté</header>
 
   <main class="card">
     <h1>Iniciar sesión</h1>
